adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo suscipit assumenda eaque recusandae nobis architecto officia error facere ipsa inventore optio praesentium quis excepturi harum eos, quasi libero vitae corporis.</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora, labore ipsam. Sunt molestiae eligendi ad, reiciendis perferendis perspiciatis mollitia ipsa quas saepe. Corporis vitae cupiditate quo saepe placeat magnam reprehenderit.</p>
 </body>
 </html>
